--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>Spring_WebMvc_POS</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+    <modules>
+        <module>Spring_Data_JPA</module>
+        <module>SpringBoot</module>
+    </modules>
+
+
 
     <dependencies>
 
@@ -16,6 +22,7 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.15.2</version>
+
         </dependency>
 
 
